--- a/index.css
+++ b/index.css
@@ -13,13 +13,57 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #e80202;
+    background-color:#1810de;
     overflow: hidden;
+    color: white;
 }
 
+@keyframes scale {
+    0% {
+        transform: scale(0) rotate(180deg);
+    }
+    100% {
+        transform: scale(1) rotate(0deg);
+    }
+}
+@keyframes change {
+    0% {
+        content: 'holis';
+    }
+    30% {
+        opacity: 0;
+    }
+    60% {
+        content: 'holis';
+        opacity: 1;
+    }
+    80% {
+        opacity: 0;
+        content: 'holis';
+    }
+    85% {
+        content: 'i love you';
+    }
+    100% {
+        content: 'i love you';
+        opacity: 1;
+    }
+}
+#change::after{
+    content: 'i love you :3';
+    animation: change 40s;
+}
+#text{
+    animation: scale 30s;
+    font-size: 100px;
+}
+#text::after{
+    content: '';
+}
+  
 .heart{
     position: absolute;
-    width: 80px;
-    height: 80px;
+    width: 50px;
+    height: 50px;
     transform: rotate(45deg);
 }
